# hypr-cursor-highlight

./: README.md  flake.nix  meson.build
include/: globals.hpp
src/: main.cpp
